# tres-api

./: .gitignore  Cargo.toml  Shuttle.toml  package.json
.sqlx/: query-3f381eb5771e93177eebbbc00eb486a599e2c4e3b56e5209f99f8a866c22d028.json  query-419ed2edac7ce48854378f4ff2d7a01dc37365f04f3af12cae937130529673e8.json  query-4215ce94eeb27a6cc754a98821c2656530923569b24f50275ea28be2978d7c9e.json
api/: main.rs  records.rs  seed.rs
migrations/: 20231018192216_create-records-table.down.sql  20231018192216_create-records-table.up.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/actions/: create_record.rs  list_records.rs  mod.rs  seed_db.rs
src/base/: mod.rs  pagination.rs  web.rs
src/model/: mod.rs  model_manager.rs  record.rs
src/routes/: create_record.rs  list_records.rs  mod.rs
tests/: dev.rs
tests/sql/: 00_create_schema.sql
